[package]
name = "randobooru"
version = "26.1.1-alpha"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "client", "gateway", "model", "rustls_backend"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["time"] }
urlencoding = "2.1.3"

[build-dependencies]
toml = "1.1.2"
